[package]
name = "mercurial-types"
version = "0.0.1"
authors = ["Facebook"]
license = "GPLv2+"

[dependencies]
ascii = "0.8.6"
abomonation = "0.5.0"
abomonation_derive = "0.3.0"
bincode = "1.0"
bytes = "0.4.5"
error-chain = "0.11.0"
futures = "0.1.17"
heapsize = "0.4.1"
heapsize_derive = "0.1.4"
itertools = "0.7.2"
lazy_static = "0.2.10"
quickcheck = "0.4.1"
rand = "0.3.18"
rust-crypto = "0.2.36"
url = "1.6.0"
serde_derive = "1.0.20"
serde = "1.0.20"
slog = "2.3"

asyncmemo = { path = "../asyncmemo" }
failure_ext = { path = "../failure_ext" }
futures-ext = { path = "../futures-ext" }
mononoke-types = { path = "../mononoke-types" }
diesel = { git = "https://github.com/kulshrax/diesel", branch = "tp2" }
rust_thrift = { path = "../rust_thrift", optional = true }

[features]
facebook = ["rust_thrift"]
