[package]
name = "mononoke-types"
version = "0.0.1"
authors = ["Facebook"]
license = "GPLv2+"

[dependencies]
ascii = "0.8.6"
abomonation = "0.5.0"
abomonation_derive = "0.3.0"
bincode = "1.0"
blake2 = "0.7.1"
bytes = "0.4.5"
chrono = "0.4.4"
heapsize = "0.4.1"
heapsize_derive = "0.1.4"
lazy_static = "0.2.10"
quickcheck = "0.4.1"
serde = "1.0.20"
serde_derive = "1.0.20"

asyncmemo = { path = "../asyncmemo" }
failure_ext = { path = "../failure_ext" }
diesel = { git = "https://github.com/kulshrax/diesel", branch = "tp2" }
rust_thrift = { path = "../rust_thrift", optional = true }

[features]
facebook = ["rust_thrift"]
